<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlayerHelper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Generic items -->
    <string name="generic_bt_ok">OK</string>
    <string name="generic_bt_cancel">キャンセル</string>
    <string name="generic_bt_back">Back</string>

    <string name="generic_tv_confirm">確認</string>
    <string name="generic_tv_menu">メニュー</string>
    <string name="generic_tv_register">登録</string>
    <string name="generic_tv_edit">編集</string>
    <string name="generic_tv_delete">削除</string>
	<string name="generic_tv_no_data">No data</string>
	<string name="generic_bt_quit">終了</string>
	<string name="generic_message_quit">Quit the app?</string>
   	<string name="generic_notice">注目</string>
   	<string name="generic_start">Start</string>
   	<string name="generic_stop">Stop</string>
    
   	<!-- actv_main.xml -->
   		<string name="actv_main_iv_desc">Picture</string>
   	
   	<!-- dlg_actionbar_mainactv.xml -->
   		<string name="dlg_actionbar_mainactv_title">Period (sec)</string>
   		<string name="dlg_actionbar_mainactv_one">1</string>
   		<string name="dlg_actionbar_mainactv_two">2</string>
   		<string name="dlg_actionbar_mainactv_three">3</string>
   		<string name="dlg_actionbar_mainactv_four">4</string>
   		<string name="dlg_actionbar_mainactv_five">5</string>
   		<string name="dlg_actionbar_mainactv_six">6</string>
   		<string name="dlg_actionbar_mainactv_seven">7</string>
   		<string name="dlg_actionbar_mainactv_eight">8</string>
   		<string name="dlg_actionbar_mainactv_nine">9</string>
   		<string name="dlg_actionbar_mainactv_ten">10</string>
   		<string name="dlg_actionbar_mainactv_fourteen">14</string>
   		<string name="dlg_actionbar_mainactv_fifteen">15</string>
   		<string name="dlg_actionbar_mainactv_sixteen">16</string>
   		
</resources>
