<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/dlg_actionbar_mainactv_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/dlg_actionbar_mainactv_rb_one"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/dlg_actionbar_mainactv_one"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/dlg_actionbar_mainactv_rb_two"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dlg_actionbar_mainactv_two"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/dlg_actionbar_mainactv_rb_three"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dlg_actionbar_mainactv_three"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/dlg_actionbar_mainactv_rb_four"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dlg_actionbar_mainactv_four"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/dlg_actionbar_mainactv_rb_five"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dlg_actionbar_mainactv_five"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/dlg_actionbar_mainactv_rb_six"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dlg_actionbar_mainactv_six"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/dlg_actionbar_mainactv_rb_seven"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dlg_actionbar_mainactv_seven"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/dlg_actionbar_mainactv_rb_eight"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dlg_actionbar_mainactv_eight"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/dlg_actionbar_mainactv_rb_nine"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dlg_actionbar_mainactv_nine"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/dlg_actionbar_mainactv_rb_ten"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dlg_actionbar_mainactv_ten"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/dlg_actionbar_mainactv_rb_fourteen"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dlg_actionbar_mainactv_fourteen"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/dlg_actionbar_mainactv_rb_fifteen"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dlg_actionbar_mainactv_fifteen"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/dlg_actionbar_mainactv_rb_sixteen"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dlg_actionbar_mainactv_sixteen"
                    android:textSize="30sp" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/dlg_actionbar_mainactv_bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/generic_bt_ok"
            android:textSize="25sp" />

        <Button
            android:id="@+id/dlg_actionbar_mainactv_bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/generic_bt_cancel"
            android:textColor="@color/red"
            android:textSize="25sp" />

    </LinearLayout>

</LinearLayout>
